css/devil_survivor.css
@import url(base.css);

body {
  color:#EEE;
  background:#222 none;
}
a:link, a:hover, a:active {
  color:#cc654c;
}
a:visited {
  color:#853c32;
}
.page-wrap {
  width:960px;
  margin:0 auto;
}
#main {
  padding:30px 0 20px 0;
  background:transparent url(devil/body_bg.png) repeat-y 80%;
}
#footer {
  margin-top:20px;
  text-align:center;
}
#header {
  float:right;
  width:200px;
  text-align:center;
}
#content {
  float:left;
  width:760px;
  min-height:550px;
}

#site-nav {
  margin-top:20px;
  font-size:24px;
  font-weight:bold;
  line-height:30px;
}

#page-nav {
  position:fixed;
  bottom:30%;
  left:0;
  width:100%;
  height:1px; line-height:1px;
}
#page-nav a {
  background:url(devil/control.png) no-repeat;
  display:block;
  width:100px;  height:100px;
  position:absolute;
  opacity:0.2;
}
#page-nav a:hover {
  opacity:1;
}
#page-nav .prev {
  background-position:0 0;
  top:0;  left:1%;
}
#page-nav .next {
  background-position:-100px 0;
  top:0; right:5%;
}

.title a {
  display:block;
  color:#853c32;
}
.title a:hover {
  color:#EEE;
}
#site-nav a:hover {
  background:transparent url(devil/menu_bg.png) no-repeat top center;
}
.post {
  width:680px;
  margin:0 auto 25px;
  background-color:rgba(34,34,34,0.7);
  box-shadow: 3px 3px 5px #101010;
  border-width:25px;
  border-radius:10px;
  border-image:url(devil/post_bd.png) 25 25 stretch;
  -o-border-image:url(devil/post_bd.png) 25 25 stretch;
}
.post .title {
}
.post .entry {
  margin:0 0 20px 0;
}
.post .meta {
  background:url(devil/meta_bg.png) repeat-x 0 center;
  width:697px;
  padding:0 15px;
  line-height:25px;
  height:25px;
  margin-left:-24px;
  margin-bottom: -23px;
  border-radius:0 0 8px 8px;
}
.post .meta time { 
  float:left;
  width:90px;
}
.post .meta .tags { 
  width:550px;
  float:right;
  text-align:right;
}
.post .meta  a {
  margin-left:10px;
  color:#888;
}
.post .meta a:hover {
  color:#EEE;
}

